testsuite/tests/grammar/invalid_rule_dup/test.out
test.py:22: error: Rule 'sec_rule' is already present in the grammar
Done
